--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     android:layout_margin="20dp"
     android:orientation="vertical"
     android:background="@drawable/flowerpath"
+    android:scaleType="centerCrop"
     tools:context=".MainActivity">
 
     <LinearLayout
@@ -58,7 +59,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="183dp"
-        android:layout_weight="1"
+        android:layout_weight="0.5"
         android:orientation="vertical">
 
         <androidx.appcompat.widget.AppCompatButton
@@ -66,7 +67,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="20dp"
             android:background="@drawable/button_style"
             android:onClick="gotoAllTrips"
             android:textSize="18sp"
